// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`stage fixture plan generation (unique-names) generates a plan for unique-names (no packages) 1`] = `
"%syntax-version=1.0.0
%project=unique-names
%uri=unique-names
schemas/unique_names/schema 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/schema
schemas/unique_names/tables/words/table [schemas/unique_names/schema] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/table
schemas/unique_names/tables/words/indexes/words_type_idx [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/indexes/words_type_idx
schemas/unique_names/tables/words/fixtures/1589271124916_fixture [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/fixtures/1589271124916_fixture
schemas/unique_names/procedures/generate_name [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/procedures/generate_name"
`;

exports[`stage fixture plan generation (unique-names) generates a plan for unique-names (with packages and includeTags) 1`] = `
"%syntax-version=1.0.0
%project=unique-names
%uri=unique-names
schemas/unique_names/schema [launchql-default-roles:@0.0.5 launchql-defaults:defaults/public launchql-verify:@0.1.0] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/schema
schemas/unique_names/tables/words/table [schemas/unique_names/schema] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/table
schemas/unique_names/tables/words/indexes/words_type_idx [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/indexes/words_type_idx
schemas/unique_names/tables/words/fixtures/1589271124916_fixture [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/fixtures/1589271124916_fixture
schemas/unique_names/procedures/generate_name [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/procedures/generate_name"
`;

exports[`stage fixture plan generation (unique-names) generates a plan for unique-names (with packages) 1`] = `
"%syntax-version=1.0.0
%project=unique-names
%uri=unique-names
schemas/unique_names/schema [launchql-default-roles:roles/administrator/role launchql-defaults:defaults/public launchql-verify:procedures/verify_view] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/schema
schemas/unique_names/tables/words/table [schemas/unique_names/schema] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/table
schemas/unique_names/tables/words/indexes/words_type_idx [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/indexes/words_type_idx
schemas/unique_names/tables/words/fixtures/1589271124916_fixture [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/tables/words/fixtures/1589271124916_fixture
schemas/unique_names/procedures/generate_name [schemas/unique_names/schema schemas/unique_names/tables/words/table] 2017-08-11T08:11:51Z launchql <launchql@5b0c196eeb62> # add schemas/unique_names/procedures/generate_name"
`;
